# task_manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/tests/: test_models.py  test_utils.py
backend/config/: asgi.py  celery.py  middleware.py  routing.py  settings.py  test_settings.py  urls.py
backend/notify/: apps.py  consumers.py  cron_tasks.py  presence.py  service.py  signals.py  telegram.py
backend/notify/tests/: test_service.py
backend/tasks/: admin.py  apps.py  mixins.py  models.py  serializers.py  urls.py  views.py
backend/tasks/tests/: test_models.py
bot/: .env.example  README.md  main.py  pyproject.toml
frontend/: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  style.css
frontend/html/: index.html  login.html  register.html
frontend/js/: auth.js  config.js  main.js  tasks.js  ui.js  ws.js
