[project]
name = "task-manager"
version = "0.1.0"
description = "Backend Manager App"
readme = "README.md"
authors = [{ name = "Tati Trif", email = "yatatitrif@yandex.com" }]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.2.1",
]
